--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-split-panel",
-  "version": "1.0.4",
-  "description": "Vue.js split-panel component",
-  "main": "dist/vue-split-panel.js",
+  "name": "vue-split",
+  "version": "1.0.0",
+  "description": "Vue.js splitjs component",
+  "main": "dist/vue-split.js",
   "scripts": {
     "dev": "webpack-dev-server --content-base test/ --open --inline --hot --compress --history-api-fallback --port 8081 --config build/webpack.dev.config.js",
     "build:example": "webpack --config build/webpack.dev.config.js",
@@ -17,83 +17,80 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bajaniyarohit/vue-split-panel.git"
+    "url": "git@github.com:abhipanda/vue-split.git"
   },
   "keywords": [
     "split.js",
-    "split",
-    "panel",
-    "pan",
-    "horizantal",
-    "vertical",
+    "splitjs",
     "vue"
   ],
-  "author": "bajaniyarohit",
+  "author": "abhipanda",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bajaniyarohit/vue-split-panel/issues"
+    "url": "https://github.com/abhipanda/vue-split/issues"
   },
-  "homepage": "https://github.com/bajaniyarohit/vue-split-panel#readme",
+  "homepage": "https://github.com/abhipanda/vue-split#readme",
   "peerDependencies": {
-    "vue": "^2.1.10"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^2.0.0",
-    "babel": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-runtime": "^6.11.6",
-    "chai": "^3.5.0",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.12.2",
-    "eslint-plugin-html": "^1.7.0",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.8.5",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "function-bind": "^1.1.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-clean-css": "^2.4.0",
-    "gulp-less": "^3.3.2",
-    "gulp-rename": "^1.2.2",
-    "html-loader": "^0.3.0",
-    "html-webpack-plugin": "^2.28.0",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-sinon-chai": "^1.2.4",
+    "@babel/cli": "^7.0.0-beta.40",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "autoprefixer-loader": "^3.2.0",
+    "babel-loader": "^8.1.0",
+    "chai": "^4.2.0",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.5.3",
+    "eslint": "^7.2.0",
+    "eslint-plugin-html": "^6.0.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^6.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "function-bind": "^1.1.1",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-less": "^4.0.1",
+    "gulp-rename": "^2.0.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0",
+    "karma": "^5.1.0",
+    "karma-coverage": "^2.0.2",
+    "karma-mocha": "^2.0.1",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^2.0.2",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "lolex": "^1.5.2",
-    "mocha": "^3.2.0",
-    "phantomjs-prebuilt": "^2.1.13",
-    "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "vue": "^2.3.3",
-    "vue-hot-reload-api": "^1.3.3",
-    "vue-html-loader": "^1.2.3",
-    "vue-loader": "^11.0.0",
-    "vue-router": "^2.2.1",
-    "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-merge": "^3.0.0"
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^4.0.2",
+    "less": "^3.11.3",
+    "less-loader": "^6.1.1",
+    "lolex": "^6.0.0",
+    "mocha": "^8.0.1",
+    "phantomjs-prebuilt": "^2.1.16",
+    "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0",
+    "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
+    "vue": "^2.6.11",
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^15.9.2",
+    "vue-router": "^3.3.3",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
   },
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
   "dependencies": {
-    "split.js": "^1.3.5"
+    "split.js": "^1.6.0"
   }
 }
